--- a/design/_design.scss
+++ b/design/_design.scss
@@ -171,6 +171,7 @@
             height: 0px !important;
             width: 0 !important;
             background: transparent;
+            display: none;
         }
 
         .glider-item{
